# swift-tools

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  format-code.sh  pyproject.toml  swift-cli.sh  swift_tutorials.md
.github/workflows/: ci.yml
code/: README.md  __init__.py  iban_validator.py  iso20022_generator.py  main.py  mt103_generator.py  requirements.txt
data/: sample_accounts.txt  sample_bics.txt  sample_payment.json
output/: message.xml  test_message.xml
swift_cli/: __init__.py  bic_validator.py  main.py
tests/: __init__.py  test_bic_validator.py  test_iban_validator.py  test_iso20022_generator.py  test_mt103_generator.py
